# ocaml_ctypes_example

lib/: dune  function_description.ml  type_description.ml
lib/libfoo/: foo.c
